# ComputerGraphics-2020

./: .gitignore  CG.sln  CG.vcxproj  CG.vcxproj.filters  CMakeLists.txt  README.md
src/: CompileG++.sh  a.out  compileClang++.sh  gmon.out  main  main.config.json  main.cpp  main.out  mainNoFltoNoOpt.config.json  main_ppm.cpp  main_test_perf.cpp  main_threaded.cpp  resultso3.txt  teste.ppm
src/objects/: AABB.h  BaseObject.cpp  BaseObject.hpp  Camera.cpp  Camera.hpp  Circle.cpp  Circle.hpp  Cone.cpp  Cone.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Object.hpp  Plane.cpp  Plane.hpp  Triangle.cpp  Triangle.hpp  World.cpp  World.hpp
src/sampler/: circle_point_sampler.cpp  circle_point_sampler.h  diagonal_point_sampler.cpp  diagonal_point_sampler.h  equidistant_point_sampler.cpp  equidistant_point_sampler.h  horizontal_point_sampler.cpp  horizontal_point_sampler.h  main_sampler.cpp  mt19937_point_sampler.cpp  mt19937_point_sampler.h  random_point_sampler.cpp  random_point_sampler.h  sampler.h  vertical_point_sampler.cpp  vertical_point_sampler.h
src/util/: Color.cpp  Color.hpp  Light.cpp  Light.hpp  Matrix3x3.cpp  Matrix3x3.hpp  Matrix4x4.cpp  Matrix4x4.hpp  RGB.cpp  RGB.hpp  Ray.cpp  Ray.hpp  ThreadPool.h  Transparency.h  Vector3f.cpp  Vector3f.hpp  Vector4f.cpp  Vector4f.hpp  VectorTransformations.cpp  VectorTransformations.hpp  VectorUtilities.cpp  VectorUtilities.hpp  definitions.hpp
x64/Debug/: CG.exe.recipe  CG.ilk  CG.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Release/: CG.exe.recipe  CG.ilk  CG.vcxproj.FileListAbsolute.txt
(+13 files in other folders)
